Made adjustments to cage_controller and db.go to initialize cage tables
