# models/dinosaur/tyrannosaurus.go
@@ -1,14 +1,13 @@
 package models
 
-// TriceratopsFactory creates Triceratops dinosaurs.
-type TriceratopsFactory struct{}
+// TyrannosaurusFactory creates Tyrannosaurus dinosaurs.
+type TyrannosaurusFactory struct{}
 
-// CreateDinosaur creates a Triceratops dinosaur with the given name.
-func (f TriceratopsFactory) CreateDinosaur(name string) Dinosaur {
+// CreateDinosaur creates a Tyrannosaurus dinosaur with the given name.
+func (f TyrannosaurusFactory) CreateDinosaur(name string) Dinosaur {
 	return Dinosaur{
 		Name:    name,
-		Species: "Triceratops",
-		Diet:    Herbivore,
-		// Add other specific attributes for Triceratops.
+		Species: "Tyrannosaurus",
+		Diet:    Carnivore,
 	}
 }
